
[profile.bench]
debug = true

[workspace]
resolver = "2"

members = [
	"mfio",
	"mfio-rt",
	"mfio-derive",
	"mfio-netfs",
]

default-members = [
	"mfio",
	"mfio-rt",
	"mfio-derive",
	"mfio-netfs",
]

[patch.crates-io]
tracy-client = { git = "https://github.com/h33p/rust_tracy_client", branch = "fibers" }
tracing-tracy = { git = "https://github.com/h33p/rust_tracy_client", branch = "fibers" }
