
[profile.bench]
debug = true

[workspace]
resolver = "2"

members = [
	"mfio",
	"mfio-rt",
	"mfio-derive",
	"mfio-netfs",
]

default-members = [
	"mfio",
	"mfio-rt",
	"mfio-derive",
	"mfio-netfs",
]

[patch.crates-io]
async-io = { git = "https://github.com/smol-rs/async-io", branch = "notgull/waitable" }
