[package]
name = "mfio-derive"
version = "0.1.0"
rust-version = "1.72"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
license = "MIT"
repository = "https://github.com/memflow/mfio"
documentation = "https://docs.rs/mfio-derive"
description = "mfio derive macros"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
