[package]
name = "mfio-netfs"
version = "0.1.0"
rust-version = "1.72"
edition = "2021"

[[example]]
name = "trace"
required-features = ["tokio/net"]

[[bin]]
name = "mfio-netfs-server"
test = false
bench = false
required-features = ["bin-deps"]

[dependencies]
mfio = { version = "0.1", path = "../mfio", default-features = false }
mfio-rt = { version = "0.1", path = "../mfio-rt", default-features = false }
cglue = { version = "0.2", features = ["task_unstable"], default-features = false }

log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
debug-ignore = "1"
postcard = { version = "1", features = ["alloc"], default-features = false }
slab = { version = "0.4", default-features = false }

flume = { version = "0.10", optional = true }
async-mutex = { version = "1", optional = true }
parking_lot = { version = "0.12", optional = true }
tracing = { version = "0.1", optional = true }

clap = { version = "4", features = ["cargo", "derive"], optional = true }
anyhow = { version = "1", optional = true }
env_logger = { version = "0.10", optional = true }

tokio = { version = "1.24", features = ["rt", "net", "macros"], optional = true }

[dev-dependencies]
mfio-rt = { version = "0.1", path = "../mfio-rt", features = ["test_suite"], default-features = false }
env_logger = "0.10"
criterion = { version = "0.5", git = "https://github.com/h33p/criterion.rs", branch = "tput2", features = ["async_tokio", "async_smol", "async_futures"] }
rand = "0.8"
tracing-tracy = { version = "0.10", features = ["fibers", "only-localhost"] }
tracing-subscriber = "0.3"

[target.'cfg(not(miri))'.dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["std"]
std = ["mfio/std", "mfio-rt/std", "mfio-rt/native", "flume", "async-mutex", "parking_lot", "tracing", "futures/std"]
bin-deps = ["clap", "tokio", "anyhow", "env_logger", "mfio/tokio"]
