[package]
name = "mfio-rt"
version = "0.1.0"
rust-version = "1.72"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
license = "MIT"
repository = "https://github.com/memflow/mfio"
description = "mfio based async runtime"

[lib]
bench = false

[[bench]]
name = "main"
harness = false
required-features = ["mfio/tokio", "mfio/async-io"]

[dependencies]
mfio = { version = "0.1", path = "../mfio" }
futures-io = "0.3"
async-channel = "1.8.0"
futures = "0.3.28"
once_cell = "1"
parking_lot = "0.12"
cfg-if = "1"
log = "0.4"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
flume = "0.10"
oneshot = "0.1"
tempdir = { version = "0.3", optional = true }
pathdiff = { version = "0.2", optional = true }
slab = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = ["Win32_System_IO", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
mio = { version = "0.8", optional = true, features = ["os-poll", "os-ext", "net"] }
sharded-slab = "0.1"
nix = "0.26"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }

[dev-dependencies]
mfio = { version = "0.1", path = "../mfio" }
pollster = { version = "0.3.0", features = ["macro"] }
criterion = { version = "0.5", git = "https://github.com/h33p/criterion.rs", branch = "tput2", features = ["async_tokio", "async_smol", "async_futures"] }
rand = "0.8"
flume = "0.10"
smol = "1"
env_logger = "0.10"
tracing-tracy = { version = "0.10", features = ["fibers", "only-localhost"] }
tempdir = "0.3"
pathdiff = "0.2"

[target.'cfg(not(miri))'.dependencies]
tokio = { version = "1.24", features = ["rt", "rt-multi-thread", "fs", "io-util"] }

#[target.'cfg(unix)'.dev-dependencies]
#nuclei = "0.2"

[target.'cfg(target_os = "linux")'.dev-dependencies]
rio = "0.9"
# We need git version to compile on alpine
glommio = { version = "0.8", git = "https://github.com/DataDog/glommio", rev = "517326bb2b63b6f6ddcf5deec7a283ee510f44df" }

[features]
default = ["mio", "io-uring", "native"]
native = []
test_suite = ["tempdir", "pathdiff"]
__bench = ["mfio/tokio", "mfio/async-io"]
