[package]
name = "mfio"
version = "0.1.0"
edition = "2018"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
license = "MIT"
repository = "https://github.com/memflow/mfio"
description = "memflow completion-based I/O primitives"

[lib]
bench = false

[[bench]]
name = "main"
harness = false

[dependencies]
futures = "0.3"
parking_lot = "0.12"
pin-project = "1.0"
tarc = "0.1"
bytemuck = "1"
cglue = { version = "0.2", git = "https://github.com/h33p/cglue", features = ["task_unstable"] }
mfio-derive = { version = "0.1", path = "../mfio-derive" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", features = ["poll"] }
# incompatible with miri
tokio = { version = "1", optional = true, features = ["net"] }
async-io = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tokio = { version = "1.24", features = ["rt", "macros", "rt-multi-thread"] }
criterion = { version = "0.5", git = "https://github.com/h33p/criterion.rs", branch = "tput2", features = ["async_tokio", "async_smol", "async_futures"] }
pollster = "0.2"
bytemuck = { version = "1", features = ["derive"] }

[features]
default = ["std"]
std = []
